[wip] Orders service OpenAPI contract. Improved internal API
